[package]
authors     = ["Chad Nehemiah <chad.nehemiah94@gmail.com>"]
categories  = ["data-structures", "concurrency"]
description = "A scalable concurrent priority queue with relaxed ordering semantics"
edition     = "2021"
keywords    = ["priority-queue", "concurrent", "lock-free", "data-structures", "skip-list"]
license     = "MIT"
name        = "spragga"
repository  = "https://github.com/maschad/spragga"
version     = "1.0.0"

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
harness = false
name    = "spraylist_bench"

[[bin]]
name = "throughput_test"
path = "src/bin/throughput_test.rs"
